sumo/tests/sumo/extended/simulation_routing/assignment/errors/testsuite.sumo
unknown_taz
empty_taz
